Adds messagesIndex.jsonl saving